fix some layout problem

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section{
     border: none;
     height: 150px;
     width: 150px;
-    font-size: 25px;
+    font-size: 18px;
     border: 2px solid white;
     border-radius: 100px;
     margin-right: 10px;
@@ -46,6 +46,7 @@ section{
   }
   button:hover{
     opacity: 0.7;
+    border: 2px solid white;
   }
   body{
     background-color: black;
@@ -113,7 +114,7 @@ section{
 
   button .img,
   p .img{
-    width: 30px;
+    width: 23px;
     display: block;
     margin: 0 auto;
   }
